--- a/package.json
+++ b/package.json
@@ -3,10 +3,15 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
-	"start": "node app.js",
-	"test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["file transfer", "real-time transfer", "share file", "file sharing"],
+  "keywords": [
+    "file transfer",
+    "real-time transfer",
+    "share file",
+    "file sharing"
+  ],
   "author": "I-As.Dev",
   "license": "MIT",
   "description": "RTFile Transfer is a tool for transferring files between users in real-time.",
@@ -16,6 +21,7 @@
     "express": "^4.19.2",
     "http": "^0.0.1-security",
     "nodemon": "^3.1.4",
+    "path": "^0.12.7",
     "socket.io": "^4.7.5",
     "uuid": "^10.0.0"
   }
